--- a/bin/ventanas/MenuPrincipal.fxml
+++ b/bin/ventanas/MenuPrincipal.fxml
@@ -89,29 +89,9 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label style="-fx-font-size: 14; -fx-background-color: grey;" stylesheets="@../style/genericos_style.css" text="Foil">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-size: 14; -fx-background-color: grey;" stylesheets="@../style/genericos_style.css" text="Gradeo">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-size: 14; -fx-background-color: grey;" stylesheets="@../style/genericos_style.css" text="Estado">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-size: 14; -fx-background-color: grey;" stylesheets="@../style/genericos_style.css" text="Precio">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
 		            </children>
         </VBox>
-        <VBox fx:id="rootVBox" layoutY="259.0" onMouseClicked="#cambiarTamanioTable" prefHeight="259.0" prefWidth="1212.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <VBox fx:id="rootVBox" layoutY="259.0" onMouseClicked="#cambiarTamanioTable" prefHeight="349.0" prefWidth="1212.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
 			<children>
             <Rectangle fx:id="barraCambioAltura" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="5.0" stroke="BLACK" strokeType="INSIDE" width="1214.0" />
                 <TableView fx:id="tablaBBDD" onKeyPressed="#teclasDireccion" onMouseClicked="#clickRaton" opacity="0.6" prefHeight="359.0" prefWidth="1212.0" stylesheets="@../style/tablas_style.css" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
@@ -119,13 +99,11 @@
 						<TableColumn fx:id="columnaId" prefWidth="47.0" text="ID" visible="false" />
 						<TableColumn fx:id="columnaNombre" editable="false" maxWidth="5500.0" prefWidth="150.0" text="Nombre" />
 						<TableColumn fx:id="columnaNumero" editable="false" maxWidth="2500.0" prefWidth="75.0" text="Numero" />
-						<TableColumn fx:id="columnaGradeo" editable="false" prefWidth="86.0" sortType="DESCENDING" text="gradeo" />
 						<TableColumn fx:id="columnaEditorial" editable="false" prefWidth="160.0" text="Editorial" />
 						<TableColumn fx:id="columnaColeccion" editable="false" maxWidth="4500.0" minWidth="0.0" prefWidth="160.0" text="Coleccion" />
 						<TableColumn fx:id="columnaRareza" editable="false" maxWidth="4100.0" prefWidth="100.0" sortType="DESCENDING" text="Rareza" />
-						<TableColumn fx:id="columnaEsFoil" editable="false" prefWidth="50.0" text="Foil" />
-						<TableColumn fx:id="columnaEstado" editable="false" maxWidth="5500.0" prefWidth="100.0" text="estado" />
-						<TableColumn fx:id="columnaPrecio" editable="false" maxWidth="5500.0" minWidth="0.0" prefWidth="90.0" text="Precio" />
+						<TableColumn fx:id="columnaPrecioNormal" editable="false" maxWidth="5500.0" minWidth="0.0" prefWidth="90.0" text="Precio Normal" />
+                  <TableColumn fx:id="columnaPrecioFoil" editable="false" maxWidth="5500.0" minWidth="0.0" prefWidth="90.0" text="Precio Foil" />
 						<TableColumn fx:id="columnaReferencia" editable="false" minWidth="0.0" prefWidth="93.0" text="Referencia" />
 					</columns>
 					<columnResizePolicy>
@@ -136,7 +114,7 @@
 
 		</VBox>
 		
-		<TextField fx:id="busquedaGeneral" layoutX="73.0" layoutY="30.0" prefHeight="25.0" prefWidth="151.0" promptText="Busqueda general" />
+		<TextField fx:id="busquedaGeneral" layoutX="76.0" layoutY="30.0" prefHeight="25.0" prefWidth="151.0" promptText="Busqueda general" />
 		<Button fx:id="botonLimpiar" layoutX="231.0" layoutY="31.0" mnemonicParsing="false" onAction="#limpiarDatos" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Limpiar" />
 		<Button fx:id="botonbbdd" layoutX="231.0" layoutY="72.0" mnemonicParsing="false" onAction="#verTodabbdd" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Ver todo" />
 		<Button fx:id="botonMostrarParametro" alignment="CENTER" contentDisplay="BOTTOM" layoutX="231.0" layoutY="116.0" mnemonicParsing="false" onAction="#mostrarPorParametro" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Busqueda" />
@@ -146,7 +124,7 @@
               <VBox fx:id="vboxContenido" layoutX="35.0" layoutY="1.0" prefHeight="285.0" prefWidth="244.0">
                <children>
             		
-                                            <ImageView fx:id="imagenCarta" fitHeight="285.0" fitWidth="244.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" />
+                                            <ImageView fx:id="imagenCarta" fitHeight="355.0" fitWidth="244.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" />
                </children>
               </VBox>
       		        <VBox fx:id="vboxImage" layoutX="300.0" layoutY="1.0" prefHeight="283.0" prefWidth="290.0">
@@ -162,9 +140,9 @@
             <Font size="10.0" />
          </font></Button>
       <Button fx:id="botonEliminar" layoutX="329.0" layoutY="116.0" mnemonicParsing="false" onAction="#accionCarta" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Eliminar Carta" />
-      <Button fx:id="botonImprimir" layoutX="290.0" layoutY="324.0" mnemonicParsing="false" onAction="#imprimirResultado" prefHeight="21.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Imprimir" textAlignment="CENTER" visible="false" wrapText="true" />
-      <Button fx:id="botonGuardarResultado" layoutX="231.0" layoutY="324.0" mnemonicParsing="false" onAction="#guardarResultado" prefHeight="13.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Guardar" textAlignment="CENTER" visible="false" wrapText="true" />
-      <Button fx:id="botonMostrarGuardados" alignment="CENTER" contentDisplay="BOTTOM" layoutX="231.0" layoutY="284.0" mnemonicParsing="false" onAction="#comicsGuardados" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Ver Guardados" visible="false">
+      <Button fx:id="botonImprimir" layoutX="65.0" layoutY="269.0" mnemonicParsing="false" onAction="#imprimirResultado" prefHeight="21.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Imprimir" textAlignment="CENTER" visible="false" wrapText="true" />
+      <Button fx:id="botonGuardarResultado" layoutX="6.0" layoutY="269.0" mnemonicParsing="false" onAction="#guardarResultado" prefHeight="13.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Guardar" textAlignment="CENTER" visible="false" wrapText="true" />
+      <Button fx:id="botonMostrarGuardados" alignment="CENTER" contentDisplay="BOTTOM" layoutX="6.0" layoutY="229.0" mnemonicParsing="false" onAction="#comicsGuardados" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Ver Guardados" visible="false">
          <font>
             <Font size="11.0" />
          </font></Button>
@@ -175,15 +153,11 @@
             <URL value="@../style/boton_reestart_style.css" />
          </stylesheets>
       </Button>
-		<ComboBox fx:id="comboboxNombreCarta" layoutX="73.0" layoutY="61.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro nombre" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-		<ComboBox fx:id="comboboxNumeroCarta" layoutX="73.0" layoutY="94.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro numero" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxEditorialCarta" layoutX="73.0" layoutY="126.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro editorial" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxColeccionCarta" layoutX="73.0" layoutY="160.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro coleccion" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxRarezaCarta" layoutX="73.0" layoutY="193.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro rareza" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxEsFoilCarta" layoutX="73.0" layoutY="226.0" prefHeight="27.0" prefWidth="151.0" promptText="Filtro foil" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxGradeoCarta" layoutX="73.0" layoutY="256.0" prefHeight="30.0" prefWidth="151.0" promptText="Filtro gradeo" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxEstadoCarta" layoutX="73.0" layoutY="290.0" prefHeight="30.0" prefWidth="151.0" promptText="Filtro estado" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
-      <ComboBox fx:id="comboboxPrecioCarta" layoutX="73.0" layoutY="325.0" prefHeight="30.0" prefWidth="151.0" promptText="Filtro precio" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
+		<ComboBox fx:id="comboboxNombreCarta" layoutX="76.0" layoutY="61.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro nombre" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
+		<ComboBox fx:id="comboboxNumeroCarta" layoutX="76.0" layoutY="94.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro numero" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
+      <ComboBox fx:id="comboboxEditorialCarta" layoutX="76.0" layoutY="126.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro editorial" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
+      <ComboBox fx:id="comboboxColeccionCarta" layoutX="76.0" layoutY="160.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro coleccion" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
+      <ComboBox fx:id="comboboxRarezaCarta" layoutX="76.0" layoutY="193.0" prefHeight="25.0" prefWidth="151.0" promptText="Filtro rareza" style="-fx-font-size: 13;" stylesheets="@../style/combobox_style.css" />
 
     </children>
 </AnchorPane>
