--- a/bin/ventanas/PantallaAccionCarta.fxml
+++ b/bin/ventanas/PantallaAccionCarta.fxml
@@ -25,71 +25,61 @@
             <Image url="@../imagenes/menuAccion.jpg" />
          </image>
       </ImageView>
-      <TextField fx:id="textFieldNombreCarta" layoutX="56.0" layoutY="29.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce nombre carta">
+      <TextField fx:id="textFieldNombreCarta" layoutX="56.0" layoutY="53.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce nombre carta">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <ComboBox fx:id="comboboxNumeroCarta" editable="true" layoutX="56.0" layoutY="53.0" prefHeight="25.0" prefWidth="125.0" promptText="Introduce numero carta" stylesheets="@../style/combobox_style.css" />
-      <TextField fx:id="textFieldEditorialCarta" layoutX="56.0" layoutY="81.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce editorial carta">
+      <ComboBox fx:id="comboboxNumeroCarta" editable="true" layoutX="56.0" layoutY="77.0" prefHeight="25.0" prefWidth="125.0" promptText="Introduce numero carta" stylesheets="@../style/combobox_style.css" />
+      <TextField fx:id="textFieldEditorialCarta" layoutX="56.0" layoutY="105.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce editorial carta">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <TextField fx:id="textFieldColeccion" layoutX="56.0" layoutY="104.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce coleccion carta">
+      <TextField fx:id="textFieldColeccion" layoutX="56.0" layoutY="128.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce coleccion carta">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <TextField fx:id="textFieldRarezaCarta" layoutX="56.0" layoutY="127.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce rareza carta">
+      <TextField fx:id="textFieldRarezaCarta" layoutX="56.0" layoutY="151.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce rareza carta">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <ComboBox fx:id="comboboxEsFoilCarta" layoutX="56.0" layoutY="150.0" prefHeight="25.0" prefWidth="125.0" promptText="Foil" />
-      <TextField fx:id="textFieldUrlCarta" layoutX="56.0" layoutY="206.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce URL carta">
+      <TextField fx:id="textFieldUrlCarta" layoutX="56.0" layoutY="175.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce URL carta">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <ComboBox fx:id="comboboxEstadoCarta" layoutX="233.0" layoutY="68.0" prefHeight="25.0" prefWidth="147.0" promptText="Estado" />
-      <ComboBox fx:id="comboboxGradeoCarta" layoutX="56.0" layoutY="178.0" prefHeight="25.0" prefWidth="125.0" promptText="Nivel de gradeo" />
-      <TextField fx:id="textFieldDireccionPortada" editable="false" layoutX="56.0" layoutY="282.0" prefHeight="21.0" prefWidth="125.0" promptText="URL local de la portada">
+      <TextField fx:id="textFieldDireccionPortada" editable="false" layoutX="56.0" layoutY="248.0" prefHeight="21.0" prefWidth="125.0" promptText="URL local de la portada">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <Label layoutX="5.0" layoutY="30.0" prefHeight="21.0" prefWidth="45.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Nombre" />
-      <Label layoutX="5.0" layoutY="55.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Numero" />
-      <Label layoutX="5.0" layoutY="81.0" prefHeight="12.0" prefWidth="46.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Editorial" />
-      <Label fx:id="labelcoleccion" layoutX="5.0" layoutY="104.0" prefHeight="21.0" prefWidth="47.0" style="-fx-background-color: white; -fx-font-size: 9;" stylesheets="@../style/genericos_style.css" text="Coleccion">
+      <Label fx:id="labelNombre" layoutX="5.0" layoutY="54.0" prefHeight="21.0" prefWidth="45.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Nombre" />
+      <Label layoutX="5.0" layoutY="79.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Numero" />
+      <Label layoutX="5.0" layoutY="105.0" prefHeight="12.0" prefWidth="46.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Editorial" />
+      <Label fx:id="labelcoleccion" layoutX="5.0" layoutY="128.0" prefHeight="21.0" prefWidth="47.0" style="-fx-background-color: white; -fx-font-size: 9;" stylesheets="@../style/genericos_style.css" text="Coleccion">
          <font>
             <Font size="10.0" />
          </font></Label>
-      <Label fx:id="labelRareza" layoutX="5.0" layoutY="128.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Rareza" />
-      <Label fx:id="labelFoil" layoutX="5.0" layoutY="153.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Foil" />
-      <Label fx:id="labelNormas" layoutX="187.0" layoutY="99.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Normas" />
-      <Label fx:id="labelEstado" layoutX="188.0" layoutY="70.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Estado" />
-      <Label fx:id="labelGradeo" layoutX="5.0" layoutY="181.0" prefHeight="21.0" prefWidth="43.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Gradeo" wrapText="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label fx:id="labelReferencia" layoutX="5.0" layoutY="206.0" prefHeight="21.0" prefWidth="29.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="URL" />
-      <Label fx:id="labelPortada" focusTraversable="false" layoutX="5.0" layoutY="281.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Portada" />
-      <Label fx:id="labelId" focusTraversable="false" layoutX="5.0" layoutY="257.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="idCarta" />
+      <Label fx:id="labelRareza" layoutX="5.0" layoutY="152.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Rareza" />
+      <Label fx:id="labelNormas" layoutX="187.0" layoutY="70.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Normas" />
+      <Label fx:id="labelReferencia" layoutX="5.0" layoutY="175.0" prefHeight="21.0" prefWidth="29.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="URL" />
+      <Label fx:id="labelPortada" focusTraversable="false" layoutX="5.0" layoutY="247.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Portada" />
+      <Label fx:id="labelId" focusTraversable="false" layoutX="5.0" layoutY="29.0" prefHeight="21.0" prefWidth="45.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Carta ID" />
       <Button fx:id="botonLimpiar" layoutX="187.0" layoutY="29.0" mnemonicParsing="false" onAction="#limpiarDatos" prefHeight="21.0" prefWidth="57.0" stylesheets="@../style/genericos_style.css" text="Limpiar" />
-      <Button fx:id="botonBusquedaAvanzada" focusTraversable="false" layoutX="5.0" layoutY="305.0" mnemonicParsing="false" onAction="#busquedaAvanzada" prefHeight="25.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Opciones avanzada" visible="false" />
-      <TextField fx:id="busquedaCodigo" layoutX="98.0" layoutY="310.0" prefHeight="25.0" prefWidth="125.0" promptText="Codigo de busqueda" visible="false" />
+      <Button fx:id="botonBusquedaAvanzada" focusTraversable="false" layoutX="5.0" layoutY="273.0" mnemonicParsing="false" onAction="#busquedaAvanzada" prefHeight="25.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Opciones avanzada" visible="false" />
+      <TextField fx:id="busquedaCodigo" layoutX="98.0" layoutY="309.0" prefHeight="25.0" prefWidth="125.0" promptText="Codigo de busqueda" visible="false" />
       <Button fx:id="botonBusquedaCodigo" layoutX="227.0" layoutY="302.0" mnemonicParsing="false" onAction="#busquedaPorCodigo" prefHeight="23.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Buscar Carta" visible="false" />
       <Button fx:id="botonModificarCarta" layoutX="601.0" layoutY="260.0" mnemonicParsing="false" onAction="#modificarDatos" prefHeight="73.0" prefWidth="229.0" style="-fx-font-size: 25;" stylesheets="@../style/genericos_style.css" text="Modificar Carta" textAlignment="CENTER" visible="false" wrapText="true">
          <font>
             <Font size="13.0" />
          </font></Button>
-      <Button fx:id="botonEliminar" disable="true" layoutX="5.0" layoutY="138.0" mnemonicParsing="false" onAction="#eliminarDatos" prefHeight="73.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Eliminar Carta" visible="false" />
-      <Button fx:id="botonVender" disable="true" ellipsisString="" layoutX="112.0" layoutY="137.0" mnemonicParsing="false" onAction="#ventaCarta" prefHeight="73.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Vender Carta" visible="false" />
+      <Button fx:id="botonEliminar" disable="true" layoutX="5.0" layoutY="79.0" mnemonicParsing="false" onAction="#eliminarDatos" prefHeight="73.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Eliminar Carta" visible="false" />
+      <Button fx:id="botonVender" disable="true" ellipsisString="" layoutX="112.0" layoutY="78.0" mnemonicParsing="false" onAction="#ventaCarta" prefHeight="73.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Vender Carta" visible="false" />
       <Button fx:id="botonbbdd" disable="true" layoutX="248.0" layoutY="29.0" mnemonicParsing="false" onAction="#verTodabbdd" prefHeight="35.0" prefWidth="57.0" stylesheets="@../style/genericos_style.css" text="Ver todo" visible="false" />
-      <TextField fx:id="textFieldIdCarta" layoutX="56.0" layoutY="257.0" prefHeight="21.0" prefWidth="125.0" promptText="ID carta">
+      <TextField fx:id="textFieldIdCarta" layoutX="56.0" layoutY="29.0" prefHeight="21.0" prefWidth="125.0" promptText="ID carta">
          <font>
             <Font size="10.0" />
          </font>
@@ -99,29 +89,25 @@
             <Font size="10.0" />
          </font>
       </Button>
-      <Label fx:id="labelPrecio" focusTraversable="false" layoutX="5.0" layoutY="231.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Precio" />
-      <TextField fx:id="textFieldPrecioCarta" layoutX="56.0" layoutY="231.0" prefHeight="21.0" prefWidth="125.0" promptText="Introduce precio carta">
+      <Label fx:id="labelPrecioNormal" focusTraversable="false" layoutX="5.0" layoutY="223.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Precio M" />
+      <TextField fx:id="textFieldPrecioCartaNormal" layoutX="56.0" layoutY="223.0" prefHeight="21.0" prefWidth="125.0" promptText="Precio carta Normal">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <VBox fx:id="rootVBox" layoutY="345.0" prefHeight="243.0" prefWidth="838.0">
+      <VBox fx:id="rootVBox" layoutY="340.0" prefHeight="248.0" prefWidth="838.0">
          <children>
             <TableView fx:id="tablaBBDD" onKeyPressed="#teclasDireccion" onMouseClicked="#clickRaton" prefHeight="300.0" prefWidth="715.0" stylesheets="@../style/tablas_style.css" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
                <columns>
                   <TableColumn fx:id="id" prefWidth="47.0" text="ID" visible="false" />
                   <TableColumn fx:id="columnaNombre" editable="false" maxWidth="5500.0" prefWidth="200.0" text="Nombre" />
-                  <TableColumn fx:id="gradeo" editable="false" maxWidth="2000.0" prefWidth="60.0" text="Gradeo" visible="false" />
                   <TableColumn fx:id="numero" editable="false" maxWidth="2500.0" prefWidth="43.0" text="Nº" visible="false" />
                   <TableColumn fx:id="columnaEditorial" editable="false" prefWidth="200.0" text="Editorial" />
-                  <TableColumn fx:id="firma" editable="false" maxWidth="4000.0" minWidth="0.0" prefWidth="148.0" text="Firma" visible="false" />
                   <TableColumn fx:id="columnaColeccion" editable="false" maxWidth="4500.0" minWidth="0.0" prefWidth="200.0" text="Coleccion" />
-                  <TableColumn fx:id="formato" editable="false" maxWidth="4100.0" prefWidth="59.0" text="Formato" visible="false" />
-                  <TableColumn fx:id="procedencia" editable="false" text="Origen" visible="false" />
                   <TableColumn fx:id="fecha" editable="false" prefWidth="103.0" text="Fecha" visible="false" />
                   <TableColumn fx:id="columnaRareza" editable="false" maxWidth="5500.0" prefWidth="150.0" text="Rareza" />
-                  <TableColumn fx:id="columnaPrecio" editable="false" maxWidth="5500.0" minWidth="0.0" prefWidth="150.0" text="Precio" />
-                  <TableColumn fx:id="referencia" editable="false" minWidth="0.0" prefWidth="93.0" resizable="false" text="Referencia" visible="false" />
+                  <TableColumn fx:id="columnaPrecioNormal" editable="false" maxWidth="5500.0" minWidth="0.0" prefWidth="150.0" text="Precio Normal" />
+                  <TableColumn fx:id="columnaPrecioFoil" editable="false" maxWidth="5500.0" minWidth="0.0" prefWidth="150.0" text="Precio Foil" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -150,7 +136,7 @@
       <Button fx:id="botonEliminarImportadoCarta" layoutX="640.0" layoutY="262.0" mnemonicParsing="false" onAction="#eliminarCartaSeleccionado" prefHeight="33.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Eliminar Carta" visible="false" wrapText="true" />
       <ImageView fx:id="cargaImagen" fitHeight="308.0" fitWidth="199.0" layoutX="391.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="imagencarta" fitHeight="308.0" fitWidth="199.0" layoutX="391.0" layoutY="31.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" />
-      <Button fx:id="botonSubidaPortada" layoutX="186.0" layoutY="280.0" mnemonicParsing="false" onAction="#nuevaPortada" prefHeight="25.0" prefWidth="25.0" stylesheets="@../style/boton_subida_style.css" />
+      <Button fx:id="botonSubidaPortada" layoutX="186.0" layoutY="246.0" mnemonicParsing="false" onAction="#nuevaPortada" prefHeight="25.0" prefWidth="25.0" stylesheets="@../style/boton_subida_style.css" />
       <Label fx:id="alarmaConexionSql" disable="true" layoutX="788.0" opacity="0.0" prefHeight="25.0" prefWidth="23.0" stylesheets="@../style/alarma_conexion_style.css" visible="false" />
       <Label fx:id="alarmaConexionInternet" layoutX="813.0" prefHeight="25.0" prefWidth="23.0" stylesheets="@../style/alarma_conexion_style.css" />
       <Button fx:id="botonCancelarSubida" layoutX="775.0" layoutY="286.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: none; -fx-background-color: none;" visible="false">
@@ -164,12 +150,19 @@
          </children>
       </VBox>
       <ProgressIndicator fx:id="progresoCarga" layoutX="713.0" layoutY="287.0" prefHeight="66.0" prefWidth="70.0" stylesheets="@../style/progreso_style.css" visible="false" />
-      <TextArea fx:id="textAreaNormasCarta" layoutX="233.0" layoutY="97.0" prefHeight="101.0" prefWidth="147.0" promptText="Normas de la carta" wrapText="true">
+      <TextArea fx:id="textAreaNormasCarta" layoutX="233.0" layoutY="68.0" prefHeight="101.0" prefWidth="147.0" promptText="Normas de la carta" wrapText="true">
          <font>
             <Font size="10.0" />
          </font>
       </TextArea>
       <Button fx:id="botonGuardarListaCartas" alignment="CENTER" layoutX="740.0" layoutY="302.0" mnemonicParsing="false" onAction="#guardarListaImportados" prefHeight="33.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Añadir Lista" textAlignment="CENTER" visible="false" wrapText="true" />
       <Button fx:id="botonEliminarImportadoListaCarta" layoutX="641.0" layoutY="302.0" mnemonicParsing="false" onAction="#eliminarListaCartas" prefHeight="33.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Eliminar Lista" visible="false" wrapText="true" />
+      <Label fx:id="labelPrecioFoil" focusTraversable="false" layoutX="5.0" layoutY="199.0" prefHeight="21.0" prefWidth="47.0" style="-fx-background-color: white;" stylesheets="@../style/genericos_style.css" text="Precio F" />
+      <TextField fx:id="textFieldPrecioCartaFoil" layoutX="56.0" layoutY="199.0" prefHeight="21.0" prefWidth="125.0" promptText="Precio carta Foil">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </TextField>
+      <ComboBox fx:id="comboBoxTienda" layoutX="4.0" layoutY="308.0" prefHeight="25.0" prefWidth="90.0" promptText="Tienda" visible="false" />
    </children>
 </Pane>
